syntax = "proto3";

package sophon_manifest_proto;

message SophonManifestProto {
    repeated SophonManifestAssetProperty assets = 1;
}

message SophonManifestAssetProperty {
    string asset_name = 1;
    repeated SophonManifestAssetChunk asset_chunks = 2;
    int32 asset_type = 3;
    int64 asset_size = 4;
    string asset_hash_md5 = 5;
}

message SophonManifestAssetChunk {
    string chunk_name = 1;
    string chunk_decompressed_hash_md5 = 2;
    int64 chunk_on_file_offset = 3;
    int64 chunk_size = 4;
    int64 chunk_size_decompressed = 5;
}