syntax = "proto3";

package sophon_patch_proto;

message SophonPatchProto {
    repeated SophonPatchAssetProperty patch_assets = 1;
    repeated SophonUnusedAssetProperty unused_assets = 2;
}

message SophonPatchAssetProperty
{
    string asset_name = 1;
    int64 asset_size = 2;
    string asset_hash_md5 = 3;
    repeated SophonPatchAssetInfo asset_infos = 4;
}

message SophonPatchAssetInfo
{
    string version_tag = 1;
    SophonPatchAssetChunk chunk = 2;
}

message SophonPatchAssetChunk 
{
    string patch_name = 1;
    string version_tag = 2;
    string build_id = 3;
    int64 patch_size = 4;
    string patch_md5 = 5;
    int64 patch_offset = 6;
    int64 patch_length = 7;
    string original_file_name = 8;
    int64 original_file_length = 9;
    string original_file_md5 = 10;
}

message SophonUnusedAssetProperty
{
    string version_tag = 1;
    repeated SophonUnusedAssetInfo asset_infos = 2;
}

message SophonUnusedAssetInfo
{
    repeated SophonUnusedAssetFile assets = 1;
}

message SophonUnusedAssetFile
{
    string file_name = 1;
    int64 file_size = 2;
    string file_md5 = 3;
}